--- a/modulo3/exercicios1/fundo001.html
+++ b/modulo3/exercicios1/fundo001.html
@@ -7,15 +7,30 @@
     <title>Imagem de fundo</title>
     <style>
         body{
-            background-image: url(imagens/wallpaper005.jpg);
-            background-repeat: no-repeat;
-            background-position: center top;
-
+            height: 100vh;
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+            background-size: cover;
+ 
+        }
+        main{
+            background-color: white;
+            width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 3px solid red;
+            border-radius: 10px;
         }
 
     </style>
 </head>
 <body>
+    <main>
+        <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero ab at voluptates dolorem, eveniet optio? Illo, vel? Libero aut dolorem facere veritatis repellat quis asperiores, ad, est iste voluptatum maxime? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit omnis fugiat dolor fugit quia delectus a quam labore. Eum ipsa laborum aliquam molestiae repellat, harum esse tempora mollitia ut iste? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam nesciunt explicabo facere error nemo eaque officiis. Numquam ipsa voluptatem quidem quis exercitationem. Ut reiciendis architecto perferendis ab necessitatibus veritatis illum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, corporis corrupti exercitationem accusamus error repudiandae molestias quidem maiores labore blanditiis in optio, deleniti ipsa repellendus iste vel soluta officiis perspiciatis?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto porro corrupti sequi, vel odio omnis nemo dolores optio fugiat temporibus dicta molestias eum explicabo, nostrum necessitatibus corporis consequatur aut autem?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum officia voluptatem vitae, dicta labore minima cupiditate reprehenderit aliquid. At, delectus. Distinctio nemo quo delectus, enim quae amet esse animi inventore!Lorem
+        </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero ab at voluptates dolorem, eveniet optio? Illo, vel? Libero aut dolorem facere veritatis repellat quis asperiores, ad, est iste voluptatum maxime? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit omnis fugiat dolor fugit quia delectus a quam labore. Eum ipsa laborum aliquam molestiae repellat, harum esse tempora mollitia ut iste? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam nesciunt explicabo facere error nemo eaque officiis. Numquam ipsa voluptatem quidem quis exercitationem. Ut reiciendis architecto perferendis ab necessitatibus veritatis illum? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla, corporis corrupti exercitationem accusamus error repudiandae molestias quidem maiores labore blanditiis in optio, deleniti ipsa repellendus iste vel soluta officiis perspiciatis?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto porro corrupti sequi, vel odio omnis nemo dolores optio fugiat temporibus dicta molestias eum explicabo, nostrum necessitatibus corporis consequatur aut autem?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum officia voluptatem vitae, dicta labore minima cupiditate reprehenderit aliquid. At, delectus. Distinctio nemo quo delectus, enim quae amet esse animi inventore!Lorem
+        </p>
+    </main>
 
 </body>
 </html>
