--- a/modulo2/exercicios2/pseudoclasse.html
+++ b/modulo2/exercicios2/pseudoclasse.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div id="d1">01</div>
-    <div>Passe o mouse aqui
+    <div id="d2">Passe o mouse aqui
     <p>Usando div > "elemento" - quer dizer que aquele elemento é um filho da div. </p>
     <p> div:hover > elemento - o que vai acontecer com esse elemento quando tiver o hover</p>
     <p>Display: none - não aparece</p>
