--- a/modulo1/exercicios2/index.html
+++ b/modulo1/exercicios2/index.html
@@ -5,15 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens dinâmicas</title>
+    <style>
+        h1{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-align: center;
+        }
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: rgba(250, 235, 215, 0.471);
+        }
+        #imagem{
+            background-color: rgb(255, 139, 212);
+        }
+
+    </style>
 </head>
 <body>
+    <div id="imagem">
     <h1>Imagem dinâmica</h1>
     <picture>
         <source media="(max-width:750px)" srcset="imagens/foto-p.png" type="image/png">
         <source media="(max-width:1050px)" srcset="imagens/foto-m.png" type="image/png">
         <img src="imagens/foto-g.png" alt="Imagem flexível">
     </picture>
-
     <ul>
         <li>Abre a tag picture</li>
         <li>Coloca a tag img para colocar a imagem no tamanho grande</li>
@@ -35,6 +49,7 @@
         <source media="(max-width:660px )" srcset="imagens/ft2.jpg" type="image/jpg">
         <img src="imagens/ft1.jpg" alt="">
     </picture>
+</div>
     <h1>Mídias</h1>
     <audio src="audio/escapism.mp3" controls preload="metadata" loop></audio>
 
